4.2.0: 2025-01-26
* Added support for ARM64 based systems on Windows
* Nintendo Switch version rebuilt with latest devkitPro
* Fix crash when enabling sound if the game was started without sound

4.1.8: 2024-05-11
* Fix MIDI music (Windows and Linux)

4.1.7: 2024-05-04
* Update to latest SDL2 for Windows
* Ensure the display size setting reads the correct value

4.1.6: 2024-05-02
* Fix crash starting up Ken's Labyrinth 1.x
* Vertical mouse movement can be swiitched off for Ken's Labyrinth 1.x
* Joycon controls work again in the latest Switch firmware
* macOS version now saves settings

4.1.5: 2023-02-03
* Fix the broken input configuration menu
* New setting for enabling/disabling vertical movement with the mouse. Disabled by default.

4.1.4: 2023-08-27
* Update SDL
* Fix Windows crash

4.1.3: 2023-08-26
* Update Nintendo Switch version to latest devkitPro
* macOs Apple Silicon and Intel version
* compiles for ARM Linux

4.1.2: 2019-07-28
* Memory errors caused by bug in the welcome screen for each level in Ken 1.x has now been fixed
* Double buffering used everywhere to fix display errors with NVidia cards on Windows
* Switch: 9.0.0 firmware compatibility

4.1.1: 2019-07-21
* Instacrash on the Nintendo Switch fixed

4.1.0: 2019-07-14
* Port for macOS created

4.0.1: 2019-07-13
* Add CMake build system
* Limit sound channels to 2 to avoid super fast sound and music

4.0.0: 2019-06-16
* Brand new game launcher menu allowing you to launch any version of the game
* Ken's Labyrinth 1.0/1.1 graphical bug fixes
* Stereoscopic 3D added as an option in setup menu

3.2.3: 2019-04-06
* Ken's Labyrinth 1.0/1.1 now fully supports game controllers/Joycons -- no longer requiring a keyboard

3.2.2: 2019-04-02
* USB keyboard and mouse support for Nintendo Switch

3.2.1: 2019-03-03
* Anisotropic filtering now supported on Switch

3.2.0: 2019-12-18
* New audio device selectable in the setup menu: Adlib random instruments. This will play